@@ -7,6 +7,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - New MQTT client
+- validate_response method for zmq
+- remove_header method for zmq
+
+### Changed
+- Remove X-Cid from zmq response
 
 ## [0.0.21] - 2019-08-07
 ### Changed
@@ -30,6 +35,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - couchdb post method to create documents
 
 ## [0.0.17] - 2019-07-30]
+### Added
+- import specific auth module with get_auth_module
+- inject auth headers on envoxy view
+
 ## [0.0.16] - 2019-07-30
 ## [0.0.15] - 2019-07-25
 ## [0.0.14] - 2019-07-25
